test/subjects/errors/break_outer.php
<?php

	break $x; // { phc-error: Cannot break/continue 1 levels }

?>
